--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpeechCARE - Medical Informatics Research Team</title>
+    <title>SpeechCARE Lab</title>
+    <link rel="icon" href="/src/assets/logo.png" />
     <meta name="description" content="SpeechCARE: Advancing healthcare through AI and deep learning in medical informatics" />
     <meta name="author" content="SpeechCARE Research Team" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
